[gd_scene load_steps=3 format=3 uid="uid://xyf5kleke3vc"]

[ext_resource type="FontFile" uid="uid://16ijcvhv04r5" path="res://Tool_MainScene/Font/VonwaonBitmap-16px.ttf" id="1_a4eex"]
[ext_resource type="Script" path="res://Tool_MainScene/scripts/ActiveButton.gd" id="2_d46sm"]

[node name="Button" type="Button"]
custom_minimum_size = Vector2(100, 120)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -12.5
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("1_a4eex")
theme_override_font_sizes/font_size = 40
text = "Active Button"
script = ExtResource("2_d46sm")

[node name="Audio_Button" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
